[gd_scene load_steps=44 format=2]

[ext_resource path="res://more_test_scenes/test-3.gd" type="Script" id=1]
[ext_resource path="res://cool_shaders/static_shader.gdshader" type="Shader" id=2]
[ext_resource path="res://addons/EpicDogfight/formations/Squadron-WildWeasel.tscn" type="PackedScene" id=3]
[ext_resource path="res://camera/CameraController.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Vehicular/misc/Spinner.gd" type="Script" id=5]
[ext_resource path="res://FormidonisStella/formidonis_stella.tscn" type="PackedScene" id=6]
[ext_resource path="res://env/procedural_sky.tres" type="Environment" id=7]
[ext_resource path="res://FPSCounter/FPSCounter.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/EpicDogfight/misc/dc_scene.tscn" type="PackedScene" id=9]
[ext_resource path="res://missiles/FoCAP.tscn" type="PackedScene" id=10]
[ext_resource path="res://more_test_scenes/ricardo.jpg" type="Texture" id=11]
[ext_resource path="res://ui/pause_menu_exp/scenes/pause_menu.tscn" type="PackedScene" id=12]
[ext_resource path="res://cool_shaders/ScreenSpaceChromaAberration.tscn" type="PackedScene" id=13]
[ext_resource path="res://cool_shaders/chroma_noise.tres" type="Texture" id=14]
[ext_resource path="res://cool_shaders/fog_noise_bump.tres" type="Texture" id=15]
[ext_resource path="res://addons/uic/debug_info/DebugInfo.tscn" type="PackedScene" id=16]
[ext_resource path="res://cool_shaders/fog_shader_unshaded.gdshader" type="Shader" id=17]
[ext_resource path="res://more_test_scenes/Ricardo.gd" type="Script" id=18]
[ext_resource path="res://cool_shaders/scrolling_cloud_shader.gdshader" type="Shader" id=19]

[sub_resource type="PlaneMesh" id=25]
size = Vector2( 2000, 2000 )
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="OpenSimplexNoise" id=26]

[sub_resource type="NoiseTexture" id=4]
width = 1024
height = 1024
seamless = true
noise = SubResource( 26 )

[sub_resource type="OpenSimplexNoise" id=27]

[sub_resource type="NoiseTexture" id=6]
width = 1024
height = 1024
seamless = true
noise = SubResource( 27 )

[sub_resource type="OpenSimplexNoise" id=29]

[sub_resource type="NoiseTexture" id=30]
seamless = true
noise = SubResource( 29 )

[sub_resource type="ShaderMaterial" id=28]
shader = ExtResource( 19 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/depth_strength = 100.0
shader_param/vdisp_modifier = 40.0
shader_param/vdisp_height = -70.0
shader_param/vdisp_flow_speed = 0.05
shader_param/vdisp_flow_dir = Vector2( 1, 1 )
shader_param/vertex_displacement = SubResource( 6 )
shader_param/vertex_flowmap = SubResource( 30 )
shader_param/albedo_noise = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true

[sub_resource type="SphereMesh" id=11]
material = SubResource( 10 )

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
albedo_texture = ExtResource( 11 )
uv1_scale = Vector3( 0.1, 0.1, 0.1 )
uv1_offset = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=13]
material = SubResource( 12 )
size = Vector3( 10, 10, 10 )

[sub_resource type="BoxShape" id=31]
extents = Vector3( 25, 25, 25 )

[sub_resource type="SpatialMaterial" id=14]
metallic = 1.0
roughness = 0.0

[sub_resource type="SphereMesh" id=15]
material = SubResource( 14 )

[sub_resource type="BoxShape" id=16]

[sub_resource type="BoxShape" id=22]
extents = Vector3( 115.847, 115, 1000 )

[sub_resource type="PlaneMesh" id=17]
size = Vector2( 10000, 10000 )

[sub_resource type="Gradient" id=18]
colors = PoolColorArray( 0, 0, 0, 1, 0.0263672, 0.0179729, 0.0095787, 1 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="ShaderMaterial" id=20]
shader = ExtResource( 17 )
shader_param/strength = 1.0
shader_param/inverted = false
shader_param/use_ramp = true
shader_param/use_depth_as_uv = true
shader_param/albedo_modifier = 2.0
shader_param/intersection_color = Color( 1, 1, 1, 1 )
shader_param/intersection_blend = 0.0
shader_param/blend_alpha = false
shader_param/alpha_override = 0.0
shader_param/use_surface_scrolling = true
shader_param/use_bump_map = true
shader_param/bump_map_noise = true
shader_param/scroll_direction = Vector2( 1, 1 )
shader_param/scroll_speed = 0.02
shader_param/second_scroll_mod = 1.338
shader_param/bump_scale = 2.0
shader_param/ramp = SubResource( 19 )
shader_param/bump_map = ExtResource( 15 )
shader_param/noise_no1 = ExtResource( 15 )

[sub_resource type="ShaderMaterial" id=21]
shader = ExtResource( 17 )
shader_param/strength = 476.924
shader_param/inverted = true
shader_param/use_ramp = true
shader_param/use_depth_as_uv = true
shader_param/albedo_modifier = 2.0
shader_param/intersection_color = Color( 0.31, 0.31, 0.31, 1 )
shader_param/intersection_blend = 0.176
shader_param/blend_alpha = false
shader_param/alpha_override = 0.0
shader_param/use_surface_scrolling = true
shader_param/use_bump_map = true
shader_param/bump_map_noise = false
shader_param/scroll_direction = Vector2( 1, 1 )
shader_param/scroll_speed = 0.04
shader_param/second_scroll_mod = 1.0
shader_param/bump_scale = 2.0
shader_param/ramp = SubResource( 19 )
shader_param/bump_map = ExtResource( 15 )

[sub_resource type="ShaderMaterial" id=23]
shader = ExtResource( 2 )
shader_param/screen_height = 2000.0
shader_param/amplitude = 0.075
shader_param/frequency = 10.0
shader_param/speed = 2.0
shader_param/amplitude_vertical = 1.0
shader_param/frequency_vertical = 1.0
shader_param/speed_vertical = 1.0
shader_param/scroll_direction = Vector2( 0, 0 )
shader_param/scrolling_speed = 1.0
shader_param/enable_palette_cycling = false
shader_param/palette_speed = 0.1

[sub_resource type="BoxShape" id=24]

[node name="test-3" type="Spatial"]
script = ExtResource( 1 )
bullet = ExtResource( 10 )

[node name="FlowmapCloud" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 25 )
material/0 = SubResource( 28 )

[node name="CameraController" parent="." instance=ExtResource( 4 )]
renderDistance = 1500.0
cameraRotationSpeed = 100.0
defaultCameraExtension = 300.0
usePhysicsProcess = false

[node name="Squadron-WildWeasel" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -262.291, 20, -261.93 )

[node name="Squadron2" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 182.009, 20, 222.14 )

[node name="DebugInfo" parent="." instance=ExtResource( 16 )]
separator_character_count = 80
separators = PoolStringArray( "memory_usage" )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.819152, 0.573577, 0, -0.573577, -0.819152, -279.141, 44.3293, -60.2457 )
light_energy = 1.262
light_indirect_energy = 6.115
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 7 )

[node name="ScreenSpaceChromaAberration" parent="." instance=ExtResource( 13 )]
offset_texture = ExtResource( 14 )

[node name="FPSCounter" parent="." instance=ExtResource( 8 )]

[node name="DistanceCompensator" parent="." instance=ExtResource( 9 )]

[node name="MeshInstance" type="MeshInstance" parent="DistanceCompensator"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
visible = false
mesh = SubResource( 11 )

[node name="Spinner2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -137.158, -7.62939e-06, 238.699 )
script = ExtResource( 5 )
speed = 5.0

[node name="Ricardo" type="KinematicBody" parent="Spinner2"]
transform = Transform( 0.698216, 0, 0.715888, 0, 1, 0, -0.715888, 0, 0.698216, 0, 0, 200 )
script = ExtResource( 18 )

[node name="Realcardo" type="MeshInstance" parent="Spinner2/Ricardo"]
transform = Transform( 5, 0, -1.49012e-07, 0, 5, 0, 1.49012e-07, 0, 5, 0, 0, 0 )
mesh = SubResource( 13 )
skeleton = NodePath("../../../DistanceCompensator")

[node name="CollisionShape" type="CollisionShape" parent="Spinner2/Ricardo"]
shape = SubResource( 31 )

[node name="Sphere" type="MeshInstance" parent="."]
transform = Transform( 18.0473, 0, 18.504, 0, 25.8477, 0, -18.504, 0, 18.0473, -316.587, -7.62939e-06, 101.92 )
use_in_baked_light = true
mesh = SubResource( 15 )
skeleton = NodePath("../DistanceCompensator")

[node name="ReflectionProbe" type="ReflectionProbe" parent="Sphere"]
extents = Vector3( 300, 100, 300 )
box_projection = true

[node name="Area" type="Area" parent="Sphere"]

[node name="CollisionShape" type="CollisionShape" parent="Sphere/Area"]
shape = SubResource( 16 )

[node name="Shippy" type="StaticBody" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )

[node name="formidonis_stella" parent="Shippy" instance=ExtResource( 6 )]

[node name="CollisionShape" type="CollisionShape" parent="Shippy"]
shape = SubResource( 22 )

[node name="Area" type="Area" parent="Shippy"]

[node name="CollisionShape" type="CollisionShape" parent="Shippy/Area"]
shape = SubResource( 22 )

[node name="des1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -152.234, 20, 366.591 )

[node name="des2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -264.256, 20, 95.8155 )

[node name="des3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -345.659, 20, 273.46 )

[node name="des4" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -542.539, 20, 269.818 )

[node name="BottomFog" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -34.8262, 0 )
visible = false

[node name="Fog" type="MeshInstance" parent="BottomFog"]
mesh = SubResource( 17 )
skeleton = NodePath("../..")
material/0 = SubResource( 20 )

[node name="FogUpper" type="MeshInstance" parent="BottomFog"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 17 )
skeleton = NodePath("../..")
material/0 = SubResource( 21 )

[node name="PauseMenu" parent="." instance=ExtResource( 12 )]

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
material = SubResource( 23 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TheFloor" type="StaticBody" parent="."]
transform = Transform( 10000, 0, 0, 0, 1, 0, 0, 0, 10000, 0, 0, -0.5 )

[node name="CollisionShape" type="CollisionShape" parent="TheFloor"]
shape = SubResource( 24 )
